# marie-phone-dashboard

./: .gitignore  Makefile  README.md  pyproject.toml
calls/: models.py  serializers.py  urls.py  views.py
calls/management/commands/: seed_data.py
calls/migrations/: 0001_initial.py  0002_call_playbook_answered_call_playbook_unanswered_and_more.py  0003_call_quality_audit_call_reflection_applied_and_more.py
data/seed/: analyses.json  lead_scores.json  quality_audits.json  transcripts.json
docs/: DEVLOG.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  api.js  router.js  style.css
frontend/src/views/: CallDetailView.vue  CallListView.vue  DashboardView.vue  PlaybookView.vue
pipeline/: agent_analyzer.py  agent_lead_intel.py  agent_transcriber.py  guardrails.py  llm_client.py  quality_gate.py  run_pipeline.py  tools.py
pipeline/prompts/: analyze_call.txt  lead_intelligence.txt  quality_gate.txt  reflection.txt
server/: settings.py  urls.py
tests/: test_analyzer_helpers.py  test_guardrails.py  test_tools.py
