[project]
name = "marie-phone-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "numba<0.61",
    "numpy<2",
    "openai-whisper>=20250625",
    "requests>=2.33.1",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
